// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <ExternalKeyboardView
      canBeFocused={true}
      enableA11yFocus={false}
      enableContextMenu={false}
      group={false}
      haloEffect={true}
      hasKeyDownPress={false}
      hasKeyUpPress={true}
      hasOnFocusChanged={true}
      lockFocus={0}
      onContextMenuPress={[Function]}
      onFocusChange={[Function]}
      onKeyUpPress={[Function]}
      orderIndex={-1}
      screenAutoA11yFocusDelay={300}
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "opacity": 1,
          }
        }
      >
        <View
          style={{}}
        >
          <View
            accessibilityLabel="Voice call"
            accessibilityRole="button"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                },
                undefined,
                {
                  "height": 46,
                },
              ]
            }
            testID="room-actions-voice-call"
          >
            <View
              style={
                {
                  "paddingRight": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "flexShrink": 1,
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      undefined,
                      {
                        "color": "#2F343D",
                      },
                    ]
                  }
                >
                  Voice call
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 12,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </ExternalKeyboardView>
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Story Snapshots: Disabled should match snapshot 1`] = `
<View
  style={
    {
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <ExternalKeyboardView
      canBeFocused={false}
      enableA11yFocus={false}
      enableContextMenu={false}
      group={false}
      haloEffect={true}
      hasKeyDownPress={false}
      hasKeyUpPress={true}
      hasOnFocusChanged={true}
      lockFocus={0}
      onContextMenuPress={[Function]}
      onFocusChange={[Function]}
      onKeyUpPress={[Function]}
      orderIndex={-1}
      screenAutoA11yFocusDelay={300}
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "opacity": 1,
          }
        }
      >
        <View
          style={{}}
        >
          <View
            accessibilityLabel="Voice call"
            accessibilityRole="button"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                },
                {
                  "opacity": 0.3,
                },
                {
                  "height": 46,
                },
              ]
            }
            testID="room-actions-voice-call"
          >
            <View
              style={
                {
                  "paddingRight": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "flexShrink": 1,
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      undefined,
                      {
                        "color": "#2F343D",
                      },
                    ]
                  }
                >
                  Voice call
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 12,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </ExternalKeyboardView>
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Story Snapshots: NoVoiceCall should match snapshot 1`] = `
<View
  style={
    {
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <ExternalKeyboardView
      canBeFocused={true}
      enableA11yFocus={false}
      enableContextMenu={false}
      group={false}
      haloEffect={true}
      hasKeyDownPress={false}
      hasKeyUpPress={true}
      hasOnFocusChanged={true}
      lockFocus={0}
      onContextMenuPress={[Function]}
      onFocusChange={[Function]}
      onKeyUpPress={[Function]}
      orderIndex={-1}
      screenAutoA11yFocusDelay={300}
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "opacity": 1,
          }
        }
      >
        <View
          style={{}}
        >
          <View
            accessibilityLabel="Voice call"
            accessibilityRole="button"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 12,
                },
                undefined,
                {
                  "height": 46,
                },
              ]
            }
            testID="room-actions-voice-call"
          >
            <View
              style={
                {
                  "paddingRight": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "flexShrink": 1,
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      undefined,
                      {
                        "color": "#2F343D",
                      },
                    ]
                  }
                >
                  Voice call
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 12,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#2F343D",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </ExternalKeyboardView>
    <View
      style={
        [
          {
            "height": 0.5,
          },
          undefined,
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>
</View>
`;
